# pdfq-back

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/: AiService.py  data.py  markdownUtils.py  server.py
src/uploads/: asdf.md
testSnippet/: chromaDB.ipynb  example.md  pdfChunk.ipynb
