[project]
name = "pdfq-back"
version = "0.1.0"
description = ""
authors = [
    {name = "obtuse-triangle",email = "me@obtuse.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb (>=1.0.9,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

